arrs/transmission/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy
  namespace: arr
spec:
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
        - name: arr-pod
          image: lscr.io/linuxserver/transmission:latest
          ports:
            - containerPort: 9091
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: config
          hostPath:
            path: /opt/transmission
        - name: downloads
          hostPath:
            path: /mnt/downloads
